--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
         <version>2.11</version>
         <relativePath/>
     </parent>
-    <groupId>com.customatics</groupId>
+   <!-- <groupId>com.customatics</groupId> -->
     <artifactId>leaptest-plugin</artifactId>
     <version>1.0.0</version>
     <packaging>hpi</packaging>
