--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
         <version>2.11</version>
         <relativePath/>
     </parent>
-   <!-- <groupId>com.customatics</groupId> -->
+    <groupId>com.customatics</groupId>
     <artifactId>leaptest-plugin</artifactId>
     <version>1.0.0</version>
     <packaging>hpi</packaging>
@@ -59,7 +59,7 @@
 
     <name>Leaptest Integration</name>
     <description>Integrates Leaptest codeless test automation with Jenkins. Run tests, get results, generate reports.</description>
-    <url>http://www.customatics.com/</url>
+    <url>https://github.com/Customatics/leaptest-plugin</url>
 
     <!-- The default licence for Jenkins OSS Plugins is MIT. Substitute for the applicable one if needed. -->
 
@@ -82,7 +82,7 @@
 
     <scm>
         <connection>scm:git:git://github.com/jenkinsci/${project.artifactId}.git</connection>
-        <developerConnection>scm:git:git@github.com:jenkinsci/${project.artifactId}.git</developerConnection>
+        <developerConnection>scm:git:git@github.com:jenkinsci/${project.artifactId}git</developerConnection>
         <url>http://github.com/jenkinsci/${project.artifactId}</url>
     </scm>
 
