--- a/pom.xml
+++ b/pom.xml
@@ -9,9 +9,9 @@
         <version>2.11</version>
         <relativePath/>
     </parent>
-    <groupId>com.customatics</groupId>
+  <!--  <groupId>com.customatics</groupId> -->
     <artifactId>leaptest-plugin</artifactId>
-    <version>1.0.0</version>
+    <version>1.0.1</version>
     <packaging>hpi</packaging>
     <dependencies>
         <dependency>
@@ -30,8 +30,6 @@
             <version>20160810</version>
         </dependency>
 
-
-
         <dependency>
             <groupId>org.jenkins-ci.plugins</groupId>
             <artifactId>jquery</artifactId>
@@ -44,6 +42,7 @@
         </dependency>
     </dependencies>
     <properties>
+
         <!-- Baseline Jenkins version you use to build the plugin. Users must have this version or newer to run. -->
         <jenkins.version>1.635</jenkins.version>
         <!-- Java Level to use. Java 7 required when using core >= 1.612 -->
@@ -55,7 +54,9 @@
              ~ hpi-plugin.version: The HPI Maven Plugin version used by the plugin..
              ~ stapler-plugin.version: The Stapler Maven plugin version required by the plugin.
         -->
+
     </properties>
+
 
     <name>Leaptest Integration</name>
     <description>Integrates Leaptest codeless test automation with Jenkins. Run tests, get results, generate reports.</description>
@@ -98,6 +99,4 @@
             <url>https://repo.jenkins-ci.org/public/</url>
         </pluginRepository>
     </pluginRepositories>
-
-
 </project>
