--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
     </parent>
   <!--  <groupId>com.customatics</groupId> -->
     <artifactId>leaptest-plugin</artifactId>
-    <version>1.2.0</version>
+    <version>1.3.0-beta</version>
     <packaging>hpi</packaging>
     <dependencies>
         <dependency>
