--- a/pom.xml
+++ b/pom.xml
@@ -6,12 +6,12 @@
     <parent>
         <groupId>org.jenkins-ci.plugins</groupId>
         <artifactId>plugin</artifactId>
-        <version>2.11</version>
+        <version>2.37</version>
         <relativePath/>
     </parent>
   <!--  <groupId>com.customatics</groupId> -->
     <artifactId>leaptest-plugin</artifactId>
-    <version>3.0.0</version>
+    <version>3.0.1</version>
     <packaging>hpi</packaging>
     <dependencies>
         <dependency>
@@ -38,19 +38,24 @@
         <dependency>
             <groupId>org.jenkins-ci.plugins</groupId>
             <artifactId>jquery</artifactId>
-            <version>1.11.2-0</version>
+            <version>1.11.2-1</version>
         </dependency>
         <dependency>
             <groupId>org.jenkins-ci.plugins</groupId>
             <artifactId>anything-goes-formatter</artifactId>
             <version>1.0</version>
         </dependency>
+        <dependency>
+            <groupId>com.google.code.findbugs</groupId>
+            <artifactId>annotations</artifactId>
+            <version>3.0.1</version>
+        </dependency>
     </dependencies>
 
     <properties>
 
         <!-- Baseline Jenkins version you use to build the plugin. Users must have this version or newer to run. -->
-        <jenkins.version>1.635</jenkins.version>
+        <jenkins.version>2.60.3</jenkins.version>
         <!-- Java Level to use. Java 7 required when using core >= 1.612 -->
         <java.level>8</java.level>
         <!-- Jenkins Test Harness version you use to test the plugin. -->
